Limit the runNetBeans task to the au.com.trgtd.tr.appl module